added analytical solution visualisation

--- a/Showcase.ipynb
+++ b/Showcase.ipynb
@@ -24,8 +24,13 @@
       "$$ \\rho_0  (x) = 1+0.999...sin(\\pi x) $$\n",
       "$$ u_0 (x) = 0.9 $$\n",
       "$$ p_0 (x) = 1$$\n",
-      "\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "#Shock tube problem: \n",
       "$\\Omega = [0,1]$\n",
       "\n",
@@ -46,9 +51,67 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Below we show how to use the analytical solution for this problem, using the module analytical_solutions.py"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "%matplotlib inline"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": "*"
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from analytical_solutions import ShockRodAnal\n",
+      "import matplotlib.pyplot as plt\n",
+      "\n",
+      "gamma = 1.4\n",
+      "AnalyticalSol = ShockRodAnal(initial_state=[(1, 1, 0), (0.1, 0.125, 0.)], geometry=(0., 1., 0.5))\n",
+      "values = AnalyticalSol.get_analytical_solution(N=500, t=0.2)\n",
+      "\n",
+      "p = values['p']\n",
+      "rho = values['rho']\n",
+      "u = values['u']\n",
+      "\n",
+      "# Energy and temperature\n",
+      "E = p/(gamma-1.) + 0.5*u**2\n",
+      "T = p/rho\n",
+      "\n",
+      "plt.figure(1)\n",
+      "plt.plot(values['x'], p, linewidth=1.5, color='b')\n",
+      "plt.ylabel('pressure')\n",
+      "plt.xlabel('x')\n",
+      "plt.axis([0, 1, 0, 1.1])\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": "*"
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Solve the problem using WENO scheme, and we compare the results with the analytical solution below:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#import weno"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
