Added more theory

--- a/Showcase.ipynb
+++ b/Showcase.ipynb
@@ -31,6 +31,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "Analytical solution for smooth flow follows"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "#Shock tube problem: \n",
       "$\\Omega = [0,1]$\n",
       "\n",
@@ -66,7 +73,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -96,8 +103,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": "*"
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAYYAAAEKCAYAAAAW8vJGAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHihJREFUeJzt3X90VOWBxvHvhAkUEBCMpmQSN0JiEoQEIRCRlY6mNBEl\nRwU1WEUDpZE2KrqnQqFqsK2C7Z6uS9pt7IooCiJIG1YhbEFH9kjSIGhQQAy/JxHRlF+KCPlx94+L\ngTGBTCa5cyfJ8zmH00xzuXl8D2eevPed+16HYRgGIiIiZ4TZHUBEREKLikFERHyoGERExIeKQURE\nfKgYRETEh4pBRER8OO0O4I+hQ4dSXl5udwwRkXYlJSWFDz74oMV/r13MGMrLyzEMQ38MgyeeeML2\nDKHyR2OhsdBYXPhPoL9Qt4tiEBGR4FExiIiIDxVDO+N2u+2OEDI0FmdpLM7SWLSewzCMkN8ryeFw\n0A5iioiElEDfOzVjEBERHyoGERHxoWIQEREfKgYREfGhYhARER8qBhER8aFiEBERHyoGERHxoWIQ\nEREflhbDlClTiIyMZMiQIec95sEHHyQ+Pp6UlBTef/99K+OIiIgfLC2GnJwciouLz/v91atXs2vX\nLioqKnjuueeYPn26lXFERMQPlhbDddddR9++fc/7/VWrVnHvvfcCkJaWxtGjRzl06JCVkUREpBm2\nrjFUVVURExPT8Do6OprKykobE4mIiO2P9vzuzn8Oh6PJ4+LigpGm83E4YM4cuO8+u5OISKiwtRhc\nLhder7fhdWVlJS6Xq8lje/TIb/g6MtJNZKTb4nSdw4cfQl4eZGRA//52pxGR1vB4PHg8nlafx/Ln\nMezbt4/x48fz4YcfNvre6tWrKSgoYPXq1ZSWljJjxgxKS0sbh9TzGCzzySeQkADPPAO/+IXdaUSk\nLQX63mlpMUyaNIl33nmH6upqIiMjmTt3LjU1NQDk5uYCkJeXR3FxMT179uSFF15g2LBhjUOqGCyV\nlga1tbB5s91JRKQthWQxtBUVg7X+8Ad45BHYuROuvNLuNCLSVvQENwnYHXeYi9Cvvmp3EhEJBZox\nCABuNxw6BNu3myUhIu2fZgzSKtnZ8PHHsHWr3UlExG4qBgFgwgTo0kWXk0REl5LkHDfeaM4a9uzR\n5SSRjkCXkqTVsrNh3z4oK7M7iYjYScUgDW65Bbp1g6VL7U4iInbSpSTxcdttUFoKXq+55iAi7Zcu\nJUmbyM6GgwfhnXfsTiIidlExiI+bb4ZeveDll+1OIiJ2UTGIjx49zI+urlgBX39tdxoRsYOKQRq5\n5x748ktYtcruJCJiBy0+SyP19fAv/wLJyfDmm3anEZFAafFZ2kxYGPz4x7B2rbl/koh0LioGadI9\n90BdnbbIEOmMdClJzmvYMHP28N57dicRkUDoUpK0uXvuMZ/qtmOH3UlEJJhUDHJekyaZM4bFi+1O\nIiLBpEtJckE33mg+vGfvXrMkRKT90KUkscQ998CBA9oiQ6QzUTHIBd1yC/TuDYsW2Z1ERIJFxSAX\n1KOHudawfDkcP253GhEJBhWDNGvKFDh5EpYtszuJiASDFp+lWYYBQ4aYu66WlNidRkT8pcVnsYzD\nATk55gN8tm+3O42IWE3FIH65+25wOuGFF+xOIiJW06Uk8dutt5qXkrxeCA+3O42INEeXksRyU6aY\nu62uWWN3EhGxkmYM4rfaWoiJgbQ0+Nvf7E4jIs3RjEEs53TC5Mnwxhvw2Wd2pxERq6gYpEVycszn\nNLz4ot1JRMQqupQkLfaDH0BlJVRUaGM9kVAWkpeSiouLSUxMJD4+nvnz5zf6fnV1NZmZmQwdOpTB\ngwezSBvytAu5ubBnD6xfb3cSEbGCZTOGuro6EhISWLduHS6XixEjRrB06VKSkpIajsnPz+fUqVM8\n/fTTVFdXk5CQwKFDh3A6nb4hNWMIKadOgcsFbjesWGF3GhE5n5CbMZSVlREXF0dsbCzh4eFkZ2dT\nVFTkc0z//v05fmZntuPHj3PJJZc0KgUJPd26mWsNRUVahBbpiCwrhqqqKmJiYhpeR0dHU1VV5XPM\ntGnT2LZtG1FRUaSkpPDss89aFUfa2E9/an58deFCu5OISFuz7Ndzh8PR7DFPPfUUQ4cOxePxsHv3\nbsaOHUt5eTm9evVqdGx+fn7D1263G7fb3YZppaXi4+GGG+Avf4FZs7QILRIKPB4PHo+n1eexrBhc\nLhder7fhtdfrJTo62ueYjRs3MmfOHAAGDhzIFVdcwc6dO0lNTW10vnOLQUJDbi7ceSf87/9CZqbd\naUTku780z507N6DzWPZ7XmpqKhUVFezbt4/Tp0+zbNkysrKyfI5JTExk3bp1ABw6dIidO3cyYMAA\nqyJJG7vlFrjsMigstDuJiLQly2YMTqeTgoICMjIyqKurY+rUqSQlJVF45l0kNzeX2bNnk5OTQ0pK\nCvX19TzzzDP069fPqkjSxrp2NRehf/97qKoyP6kkIu2fbnCTVtmzB+Li4PHHQVf7REJLoO+dKgZp\ntZtvhs2bYf9+cxYhIqEh5O5jkM4jL8+8n0E3u4l0DJoxSKvV10NiIkREwMaNdqcRkW9pxiC2CQsz\nZw0lJeYlJRFp31QM0ibuuw8uuggWLLA7iYi0lopB2kTv3uZDfF59Fb74wu40ItIaKgZpM3l55s6r\n//3fdicRkdbQ4rO0qbFjYedO8/4GbZQrYi8tPktIyMsDrxf+9je7k4hIoDRjkDZVVwdXXgnf/z68\n+67daUQ6N80YJCR06QIzZpj3M5SW2p1GRAKhGYO0ua++gpgY+OEPYflyu9OIdF6aMUjIuOgiuP9+\nWLkS9u61O42ItJSKQSyRl2feEa2ntYq0P7qUJJaZPBn++lfzU0oXX2x3GpHOR5eSJOQ88oi53vDc\nc3YnEZGW0IxBLJWebt7wtncvhIfbnUakc9GMQULSv/2b+djPZcvsTiIi/tKMQSxVXw/JyeBwQHm5\nuSAtIsGhGYOEpLAwmDULPvoI3nzT7jQi4g/NGMRytbUQHw/9+5vbZDgcdicS6Rw0Y5CQ5XTCL35h\nPuFtwwa704hIczRjkKA4eRJiY+Hqq6G42O40Ip2DZgwS0rp3NzfXW7sWtmyxO42IXIhmDBI0x47B\n5ZdDRga89prdaUQ6Ps0YJOT16QM/+xmsWAGffGJ3GhE5HxWDBNWMGdCtG8ybZ3cSETmfZouhvr6e\nxYsX8+STTwJw4MABysrKLA8mHVNkpLkl90svwe7ddqcRkaY0u8Zw//33ExYWxltvvcXHH3/M4cOH\n+dGPfsR7770XrIxaY+hgDh6EAQNg0iRYuNDuNCIdl2VrDP/4xz/405/+RPfu3QHo168fNTU1LU8o\nckb//pCbq1mDSKhqthi6du1KXV1dw+svvviCMG14I600c6a52+pTT9mdRES+q9l3+AceeIBbb72V\nzz//nNmzZzN69Gh++ctfBiObdGDfzhpefBH27LE7jYic64JrDPX19ZSUlNCvXz/Wr18PQHp6OklJ\nSX6dvLi4mBkzZlBXV8dPfvITZs6c2egYj8fDww8/TE1NDREREXg8nsYhtcbQIX36qbnW8OMfw/PP\n251GpOMJ9L2z2cXnoUOH8sEHH7T4xHV1dSQkJLBu3TpcLhcjRoxg6dKlPqVy9OhRRo8ezdq1a4mO\njqa6upqIiIjGIVUMHdZDD8Gf/mQ+zGfAALvTiHQsli0+//CHP2TFihUtPnlZWRlxcXHExsYSHh5O\ndnY2RUVFPscsWbKECRMmEB0dDdBkKUjHNnMmdOkCZz4NLSIhoNli+POf/8wdd9xB165d6dWrF716\n9aJ3797NnriqqoqYmJiG19HR0VRVVfkcU1FRweHDh7n++utJTU1l8eLFAfwnSHsWFQU//zksXgzb\nt9udRkQAnM0d8NVXXwV0Yocfm+7X1NSwZcsW1q9fz9dff82oUaO45ppriI+Pb3Rsfn5+w9dutxu3\n2x1QLgk9v/wl/OUv8Nhj8PrrdqcRab88Hk+T67Qt1WwxbDjPBvpjxoy54N9zuVx4vd6G116vt+GS\n0bdiYmKIiIige/fudO/enTFjxlBeXt5sMUjHEhFhPhs6Px82bYIRI+xOJNI+ffeX5rlz5wZ0nmYX\nn2+++eaG3/6/+eYbysrKGD58OG+99dYFT1xbW0tCQgLr168nKiqKkSNHNlp8/vjjj8nLy2Pt2rWc\nOnWKtLQ0li1bxqBBg3xDavG5w/vyS3PxeehQ+Pvf7U4j0jEE+t7Z7IzhjTfe8Hnt9Xp56KGHmj+x\n00lBQQEZGRnU1dUxdepUkpKSKCwsBCA3N5fExEQyMzNJTk4mLCyMadOmNSoF6Rx69YLZs+GRR+Ct\nt+CGG+xOJNJ5tfh5DIZhMGjQIHbs2GFVpkY0Y+gcvvnGfDZ0VBSUlurZ0CKtZdmM4YEHHmj4ur6+\nng8++IDhw4e3+AeJNOd734MnnoBp06CoCG65xe5EIp1TszOGRYsWNawxOJ1OYmNjGT16dFDCfUsz\nhs6jthaGDIH6evjoI3M/JREJjGV3Pp/r8OHDVFZWkpyc3OIf1Boqhs7lf/4HsrKgoMC8x0FEAmNZ\nMbjdblatWkVtbS3Dhw/n0ksvZfTo0fzhD38IOGxLqRg6F8MwF58/+gh27TIfCSoiLWfZlhhHjx6l\nd+/erFy5ksmTJ1NWVsa6desCCiniD4cD/v3foboann7a7jQinU+zxVBXV8fBgwd57bXXuOmmmwD/\n7moWaY1hw+Cee+A//gP277c7jUjn0mwxPP7442RkZDBw4EBGjhzJ7t27m7wzWaSt/fa35uxh9my7\nk4h0Li2+j8EOWmPovH71K7Mgysq0VYZIS1m2xvDoo49y/PhxampqSE9PJyIiQrugStDMnAmRkeZz\nG/S7gUhwNFsMa9eupXfv3rzxxhvExsaye/dufve73wUjmwi9esG8eVBSAi+/bHcakc6h2WKora0F\nzD2TJk6cSJ8+fbT4LEE1eTKkpcGjj8Lx43anEen4mi2G8ePHk5iYyObNm0lPT+fzzz/ne9/7XjCy\niQAQFgYLFsBnn8FvfmN3GpGOz6/F58OHD9OnTx+6dOnCiRMn+PLLL/n+978fjHyAFp/FNHWq+aS3\nDz+EhAS704iEPssWn0+cOMEf//hH7r//fgA+/fRT3nvvvZYnFGmlp5+GHj20EC1itWaLIScnh65d\nu7Jx40YAoqKimDNnjuXBRL7rsstg7lxYuxZWrbI7jUjH1Wwx7N69m5kzZ9K1a1cAevbsaXkokfP5\n2c9g8GB48EEI8HHkItKMZouhW7dunDx5suH17t276datm6WhRM4nPBwKC+HAAfMZ0SLS9pothvz8\nfDIzM6msrOSuu+7ihhtuYP78+cHIJtKka6+F3FxzH6X337c7jUjHc8FPJdXX17N8+XLS09MpLS0F\nIC0tjUsvvTRoAUGfSpLGjhyBpCS4/HLz5rcuXexOJBJ6LHsew/Dhw9m8eXPAwdqCikGa8uqrMGmS\neY9DXp7daURCj2XFMGvWLCIiIrjzzjt9Fp779evX8pQBUjFIUwwDbrwRNm6EHTvA5bI7kUhosawY\nYmNjm9wCY+/evS3+YYFSMcj57NkDV10FN90EK1bYnUYktFh2g9uOHTv4+c9/TkpKCldffTUPPPAA\n27dvDyikSFsbMACeeAJefx3++le704h0DM3OGG6//XZ69+7N3XffjWEYLFmyhGPHjrF8+fJgZdSM\nQS6opgZGjoSDB2HbNrjkErsTiYQGyy4lDRo0qNEMoan/z0oqBmlOeTmkpsLtt8OSJXanEQkNll1K\nGjZsGCUlJQ2vS0tLGT58eIt/kIiVUlLgscdg6VJdUhJprWZnDImJiXzyySfExMTgcDg4cOAACQkJ\nOJ1OHA4HW7dutT6kZgzih5oa87kNVVXmJaWICLsTidjLsktJ+/btu+AJYmNjW/xDW0rFIP7autW8\npDRhgjl7EOnMLCuGUKBikJb49a/h8cfNTyrddpvdaUTso2IQOaOmBq65Brxe86E+kZF2JxKxh2WL\nzyLtTXg4vPQSfPkl5OTooT4iLWVpMRQXF5OYmEh8fPwFd2TdtGkTTqeTlStXWhlHOpGrroLf/x7W\nrIGCArvTiLQvll1KqqurIyEhgXXr1uFyuRgxYgRLly4lKSmp0XFjx46lR48e5OTkMGHChMYhdSlJ\nAmAYMH48rFsHmzbBkCF2JxIJrpC7lFRWVkZcXByxsbGEh4eTnZ1NUVFRo+MWLFjAxIkTg76Vt3R8\nDgcsXAgXXwx33QXnPG9KRC7AsmKoqqoiJiam4XV0dDRVVVWNjikqKmL69OkATW7WJ9Ial10GixbB\nRx/BrFl2pxFpHywrBn/e5GfMmMG8efMapju6XCRWyMyEhx6C//xPWL3a7jQioc9p1YldLhder7fh\ntdfrJTo62ueYzZs3k52dDUB1dTVr1qwhPDycrKysRufLP+cBv263G7fbbUlu6ZjmzYO334bJk83H\ngZ4zmRXpMDweDx6Pp9XnsWzxuba2loSEBNavX09UVBQjR45scvH5Wzk5OYwfP57bmrgjSYvP0hY+\n+cS8K/qqq+Cdd6BrV7sTiVgr5BafnU4nBQUFZGRkMGjQIO68806SkpIoLCyksLDQqh8rcl5XXgnP\nPw+lpTBzpt1pREKX7nyWTufb9Ybly2HiRLvTiFhHW2KI+On0aRgzBrZvh/feM2cSIh2RikGkBQ4c\ngGHDICrKvLTUo4fdiUTaXsitMYiEsssvh5dfNu9v+MlPtJ+SyLlUDNJpZWbCb39rPrfhAlt5iXQ6\nupQknZphmNtlLFsGq1bBzTfbnUik7WiNQSRAX38N110HFRXmesOgQXYnEmkbKgaRVvB6YcQI6NUL\nysqgb1+7E4m0nhafRVohJgZWroT9++HOO82nwIl0VioGkTOuvRYKC+Hvf4fp0/VJJem8LNtET6Q9\nysmBPXvgN7+B2Fj41a/sTiQSfFpjEPkOw4B774XFi+HFF80dWUXaIy0+i7Sh06dh3DhzF9biYkhP\ntzuRSMupGETa2LFj8K//am6f8X//B8nJdicSaRkVg4gFvF4YNcq8vPTuu+a6g0h7oWIQsciHH5q7\nsfbta+6rFB5udyKxUt++MGUKhHWAz2yqGEQsVFICd99tfmJJOr6PPjKf9NfeBfreqY+rivhh1Chz\ny4yTJ+1OIlZ6803zBsdvvrE7ib1UDCJ+CguDnj3tTiFWuugi839ra+3NYbcOcBVNRKRtfLt+pGIQ\nEREAnGeuoagYREQEUDF8S8UgInLGt8XQ2XfXVTGIiJyhGYNJxSAicoYWn00qBhGRMzRjMKkYRETO\nUDGYVAwiImeoGEwqBhGRM/SpJJOKQUTkDM0YTCoGEZEz9Kkkk4pBROQMzRhMKgYRkTNUDCbLi6G4\nuJjExETi4+OZP39+o++/8sorpKSkkJyczOjRo9m6davVkUREmqRiMFn6PIa6ujry8vJYt24dLpeL\nESNGkJWVRVJSUsMxAwYMYMOGDfTp04fi4mJ++tOfUlpaamUsEZEm6VNJJktnDGVlZcTFxREbG0t4\neDjZ2dkUFRX5HDNq1Cj69OkDQFpaGpWVlVZGEhE5L80YTJYWQ1VVFTExMQ2vo6OjqaqqOu/xzz//\nPOPGjbMykojIeXXpAg6HisHSS0kOh8PvY99++20WLlzIu+++2+T38/PzG752u9243e5WphMRaczp\nbL/F4PF48Hg8rT6PpcXgcrnwer0Nr71eL9HR0Y2O27p1K9OmTaO4uJi+ffs2ea5zi0FExCrtuRi+\n+0vz3LlzAzqPpZeSUlNTqaioYN++fZw+fZply5aRlZXlc8yBAwe47bbbePnll4mLi7MyjohIs5xO\nLT5bOmNwOp0UFBSQkZFBXV0dU6dOJSkpicLCQgByc3N58sknOXLkCNOnTwcgPDycsrIyK2OJiJxX\ne54xtBWHYRiG3SGa43A4aAcxRaQDiIyE226D//ovu5O0XqDvnbrzWUTkHJoxqBhERHyoGFQMIiI+\nVAwqBhERH/pUkopBRMSHZgwqBhERH+HhKgYVg4jIOTRjUDGIiPhQMagYRER8qBhUDCIiPvSpJBWD\niIgPzRhUDCIiPvSpJBWDiIgPzRhUDCIiPlQMFj+PQUSkvXE64dgx2LDB7iT2UTGIiJzj4oth/374\nwQ/sTmIfPahHROQcx47B5s12p2gb6emBvXeqGEREOig9wU1ERNqEikFERHyoGERExIeKQUREfKgY\nRETEh4pBRER8qBhERMSHikFERHyoGERExIeKQUREfKgYRETEh4pBRER8qBhERMSHpcVQXFxMYmIi\n8fHxzJ8/v8ljHnzwQeLj40lJSeH999+3Mo6IiPjBsmKoq6sjLy+P4uJitm/fztKlS9mxY4fPMatX\nr2bXrl1UVFTw3HPPMX36dKvidBgej8fuCCFDY3GWxuIsjUXrWVYMZWVlxMXFERsbS3h4ONnZ2RQV\nFfkcs2rVKu69914A0tLSOHr0KIcOHbIqUoegf/RnaSzO0licpbFoPcuKoaqqipiYmIbX0dHRVFVV\nNXtMZWWlVZFERMQPlhWDw+Hw67jvPl3I378nIiLWcFp1YpfLhdfrbXjt9XqJjo6+4DGVlZW4XK5G\n5xo4cKAK4xxz5861O0LI0FicpbE4S2NhGjhwYEB/z7JiSE1NpaKign379hEVFcWyZctYunSpzzFZ\nWVkUFBSQnZ1NaWkpF198MZGRkY3OtWvXLqtiiojId1hWDE6nk4KCAjIyMqirq2Pq1KkkJSVRWFgI\nQG5uLuPGjWP16tXExcXRs2dPXnjhBaviiIiInxzGdy/yi4hIpxZSdz7rhrizmhuLV155hZSUFJKT\nkxk9ejRbt261IWVw+PPvAmDTpk04nU5WrlwZxHTB4884eDwerr76agYPHozb7Q5uwCBqbiyqq6vJ\nzMxk6NChDB48mEWLFgU/ZJBMmTKFyMhIhgwZct5jWvy+aYSI2tpaY+DAgcbevXuN06dPGykpKcb2\n7dt9jnnzzTeNG2+80TAMwygtLTXS0tLsiGo5f8Zi48aNxtGjRw3DMIw1a9Z06rH49rjrr7/euOmm\nm4wVK1bYkNRa/ozDkSNHjEGDBhler9cwDMP44osv7IhqOX/G4oknnjBmzZplGIY5Dv369TNqamrs\niGu5DRs2GFu2bDEGDx7c5PcDed8MmRmDbog7y5+xGDVqFH369AHMseio93/4MxYACxYsYOLEiVx6\n6aU2pLSeP+OwZMkSJkyY0PDpv4iICDuiWs6fsejfvz/Hjx8H4Pjx41xyySU4nZYtqdrquuuuo2/f\nvuf9fiDvmyFTDLoh7ix/xuJczz//POPGjQtGtKDz999FUVFRw5YqHfGjzf6MQ0VFBYcPH+b6668n\nNTWVxYsXBztmUPgzFtOmTWPbtm1ERUWRkpLCs88+G+yYISOQ982QqVDdEHdWS/6b3n77bRYuXMi7\n775rYSL7+DMWM2bMYN68eTgcDgzDaPRvpCPwZxxqamrYsmUL69ev5+uvv2bUqFFcc801xMfHByFh\n8PgzFk899RRDhw7F4/Gwe/duxo4dS3l5Ob169QpCwtDT0vfNkCmGtrwhrr3zZywAtm7dyrRp0ygu\nLr7gVLI982csNm/eTHZ2NmAuOq5Zs4bw8HCysrKCmtVK/oxDTEwMERERdO/ene7duzNmzBjKy8s7\nXDH4MxYbN25kzpw5gHmT1xVXXMHOnTtJTU0NatZQEND7ZputgLRSTU2NMWDAAGPv3r3GqVOnml18\nLikp6bALrv6Mxf79+42BAwcaJSUlNqUMDn/G4lz33Xef8frrrwcxYXD4Mw47duww0tPTjdraWuPE\niRPG4MGDjW3bttmU2Dr+jMXDDz9s5OfnG4ZhGJ999pnhcrmMf/7zn3bEDYq9e/f6tfjs7/tmyMwY\ndEPcWf6MxZNPPsmRI0carquHh4dTVlZmZ2xL+DMWnYE/45CYmEhmZibJycmEhYUxbdo0Bg0aZHPy\ntufPWMyePZucnBxSUlKor6/nmWeeoV+/fjYnt8akSZN45513qK6uJiYmhrlz51JTUwME/r6pG9xE\nRMRHyHwqSUREQoOKQUREfKgYRETEh4pBRER8qBhERMSHikFERHyoGERExIeKQUREfKgYRAKwadMm\nUlJSOHXqFCdOnGDw4MFs377d7lgibUJ3PosE6LHHHuObb77h5MmTxMTEMHPmTLsjibQJFYNIgGpq\nakhNTaV79+6UlJR0yC3gpXPSpSSRAFVXV3PixAm++uorTp48aXcckTajGYNIgLKysrjrrrvYs2cP\nBw8eZMGCBXZHEmkTIbPttkh78tJLL9GtWzeys7Opr6/n2muvxePx4Ha77Y4m0mqaMYiIiA+tMYiI\niA8Vg4iI+FAxiIiIDxWDiIj4UDGIiIgPFYOIiPhQMYiIiA8Vg4iI+Ph/5+tnDtXwEuAAAAAASUVO\nRK5CYII=\n",
+       "text": [
+        "<matplotlib.figure.Figure at 0xa33e3c8>"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -114,7 +130,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
     }
    ],
    "metadata": {}
